// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create WinRm Cred Wizard should render form 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="command-winrm"
        >
          <svg
            height="37"
            viewBox="0 0 14 11"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 0c-.2 0-.5 0-.7.2S2 .6 2 .9C1.3 3.8.7 6.7 0 9.7c0 .3 0 .6.2.9s.5.4.9.4H11c.3 0 .5-.1.7-.3s.3-.4.3-.6c.6-2.9 1.3-5.9 1.9-8.8.1-.3.1-.7-.1-.9s-.5-.4-.9-.4zm0 1h9.9v.1C12.3 4 11.6 7 11 9.9v.1H1v-.1C1.6 6.9 2.3 4 3 1c-.1 0 0 0 0 0zm1.8.5c-.3 0-.6.2-.7.4s-.1.6.1.9l2.4 2.6-3.8 2.7c-.2.2-.3.5-.3.7s.2.5.5.6.5.1.8-.1L8.3 6c.2-.1.3-.3.3-.5s-.1-.4-.2-.6l-3-3.2c-.2-.1-.4-.2-.6-.2zM6.7 8c-.2 0-.5.1-.6.4-.1.2-.1.5 0 .7s.4.4.7.4h2c.3 0 .5-.1.7-.4.1-.2.1-.5 0-.8-.2-.2-.5-.3-.8-.3z"
              fill="#4d5969"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        secrets.secret.winrmCredential
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          secrets.createWinRmCredWizard.titleDetails
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          configuration
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          secrets.stepTitleVerify
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-small"
        style="height: 500px;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xlarge StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
        >
          secrets.createWinRmCredWizard.titleDetails
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="StyledProps--font StyledProps--main formData"
              >
                <div
                  class="StyledProps--font StyledProps--main main"
                >
                  <div
                    class="InputWithIdentifier--txtNameContainer TextInput--main"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                    >
                      <div
                        class="Text--withDocsTooltip"
                        data-tooltip-id="universalInputNameWithId"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          Id
                        </p>
                      </div>
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        :
                      </p>
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                            tabindex="0"
                          >
                            <span
                              class="bp3-editable-text-content"
                              style="height: 1px; line-height: 1px; min-width: 0;"
                            />
                          </div>
                        </span>
                      </span>
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="Edit"
                        style="vertical-align: middle; cursor: pointer;"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                          <path
                            clip-rule="evenodd"
                            d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                            fill="currentColor"
                            fill-rule="evenodd"
                            opacity="0.3"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="name-0"
                    >
                      <label
                        class="bp3-label"
                        for="name"
                      >
                        <span
                          class="Tooltip--acenter"
                          data-tooltip-id="winRmStepDetailsForm_name"
                        >
                          name
                        </span>
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="name"
                            placeholder="common.namePlaceholder"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <label
                      class="Label--main bp3-label descriptionLabel"
                    >
                      optionalField
                      <span
                        class="bp3-icon StyledProps--main editOpen"
                        data-icon="Edit"
                        data-name="edit"
                        data-testid="description-edit"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                          <path
                            clip-rule="evenodd"
                            d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                            fill="currentColor"
                            fill-rule="evenodd"
                            opacity="0.3"
                          />
                        </svg>
                      </span>
                    </label>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <label
                      class="Label--main bp3-label descriptionLabel"
                    >
                      optionalField
                      <span
                        class="bp3-icon StyledProps--main editOpen"
                        data-icon="Edit"
                        data-name="edit"
                        data-testid="tags-edit"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                          <path
                            clip-rule="evenodd"
                            d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                            fill="currentColor"
                            fill-rule="evenodd"
                            opacity="0.3"
                          />
                        </svg>
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    continue
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Create WinRm Cred Wizard should render form 2`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="command-winrm"
        >
          <svg
            height="37"
            viewBox="0 0 14 11"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 0c-.2 0-.5 0-.7.2S2 .6 2 .9C1.3 3.8.7 6.7 0 9.7c0 .3 0 .6.2.9s.5.4.9.4H11c.3 0 .5-.1.7-.3s.3-.4.3-.6c.6-2.9 1.3-5.9 1.9-8.8.1-.3.1-.7-.1-.9s-.5-.4-.9-.4zm0 1h9.9v.1C12.3 4 11.6 7 11 9.9v.1H1v-.1C1.6 6.9 2.3 4 3 1c-.1 0 0 0 0 0zm1.8.5c-.3 0-.6.2-.7.4s-.1.6.1.9l2.4 2.6-3.8 2.7c-.2.2-.3.5-.3.7s.2.5.5.6.5.1.8-.1L8.3 6c.2-.1.3-.3.3-.5s-.1-.4-.2-.6l-3-3.2c-.2-.1-.4-.2-.6-.2zM6.7 8c-.2 0-.5.1-.6.4-.1.2-.1.5 0 .7s.4.4.7.4h2c.3 0 .5-.1.7-.4.1-.2.1-.5 0-.8-.2-.2-.5-.3-.8-.3z"
              fill="#4d5969"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        secrets.secret.winrmCredential
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          secrets.createWinRmCredWizard.titleDetails
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          configuration
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          secrets.stepTitleVerify
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-small"
        style="min-height: 500px; width: 400px;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xlarge StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
        >
          secrets.createSSHCredWizard.titleAuth
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="bp3-form-group"
                data-id="authScheme-0"
              >
                <label
                  class="bp3-label"
                  for="authScheme"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="stepAuthenticationForm_authScheme"
                  >
                    secrets.sshAuthFormFields.labelType
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="StyledProps--main"
                  >
                    
                    <div
                      class="RadioButtonGroup--inline"
                    >
                      <label
                        class="RadioButton--radio StyledProps--main"
                      >
                        <input
                          checked=""
                          class="RadioButton--input"
                          name="authScheme"
                          type="radio"
                          value="NTLM"
                        />
                        <span
                          class="RadioButton--radioIcon"
                        />
                        secrets.winRmAuthFormFields.ntlm
                      </label>
                      <label
                        class="RadioButton--radio StyledProps--main"
                      >
                        <input
                          class="RadioButton--input"
                          name="authScheme"
                          type="radio"
                          value="Kerberos"
                        />
                        <span
                          class="RadioButton--radioIcon"
                        />
                        kerberos
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-medium StyledProps--flex"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="flex: 1; display: flex; align-items: center;"
                >
                  <span
                    class="bp3-icon bp3-icon-lock StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                    icon="lock"
                  >
                    <svg
                      data-icon="lock"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        lock
                      </desc>
                      <path
                        d="M13.96 7H12V3.95C12 1.77 10.21 0 8 0S4 1.77 4 3.95V7H1.96c-.55 0-.96.35-.96.9v6.91c0 .54.41 1.19.96 1.19h12c.55 0 1.04-.65 1.04-1.19V7.9c0-.55-.49-.9-1.04-.9zM6 7V3.95c0-1.09.9-1.97 2-1.97s2 .88 2 1.97V7H6z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  authentication
                </p>
              </div>
              <div
                class="bp3-form-group"
                data-id="domain-1"
              >
                <label
                  class="bp3-label"
                  for="domain"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="stepAuthenticationForm_domain"
                  >
                    secrets.winRmAuthFormFields.domain
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="domain"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="username-2"
              >
                <label
                  class="bp3-label"
                  for="username"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="stepAuthenticationForm_username"
                  >
                    username
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="username"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="null-3"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <label
                      class="bp3-label"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="stepAuthenticationForm_password"
                      >
                        password
                      </span>
                    </label>
                    <div
                      class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                    >
                      <a
                        class="containerLink"
                        data-testid="password"
                        href="/account/dummy/resources/secrets"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="key-main"
                          style="height: 12px;"
                        >
                          <svg
                            height="24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              stroke="#1C1C28"
                              stroke-width="0.5"
                            >
                              <path
                                d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                              />
                              <path
                                d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                              />
                            </g>
                          </svg>
                        </span>
                        <p
                          class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                        >
                          <div>
                            createOrSelectSecret
                          </div>
                        </p>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-medium StyledProps--flex"
              >
                <div
                  class="bp3-form-group"
                  data-id="useSSL-4"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                    >
                      <input
                        name="useSSL"
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <span
                        class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                        data-tooltip-id="stepAuthenticationForm_useSSL"
                      >
                        secrets.winRmAuthFormFields.useSSL
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="skipCertChecks-5"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                    >
                      <input
                        name="skipCertChecks"
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <span
                        class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                        data-tooltip-id="stepAuthenticationForm_skipCertChecks"
                      >
                        secrets.winRmAuthFormFields.skipCertCheck
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="useNoProfile-6"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                    >
                      <input
                        name="useNoProfile"
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <span
                        class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                        data-tooltip-id="stepAuthenticationForm_useNoProfile"
                      >
                        secrets.winRmAuthFormFields.useNoProfile
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="port-7"
              >
                <label
                  class="bp3-label"
                  for="port"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="stepAuthenticationForm_port"
                  >
                    secrets.winRmAuthFormFields.labelWinRmPort
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="port"
                      type="text"
                      value="22"
                    />
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    back
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    saveAndContinue
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Create WinRm Cred Wizard should render form 3`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="command-winrm"
        >
          <svg
            height="37"
            viewBox="0 0 14 11"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 0c-.2 0-.5 0-.7.2S2 .6 2 .9C1.3 3.8.7 6.7 0 9.7c0 .3 0 .6.2.9s.5.4.9.4H11c.3 0 .5-.1.7-.3s.3-.4.3-.6c.6-2.9 1.3-5.9 1.9-8.8.1-.3.1-.7-.1-.9s-.5-.4-.9-.4zm0 1h9.9v.1C12.3 4 11.6 7 11 9.9v.1H1v-.1C1.6 6.9 2.3 4 3 1c-.1 0 0 0 0 0zm1.8.5c-.3 0-.6.2-.7.4s-.1.6.1.9l2.4 2.6-3.8 2.7c-.2.2-.3.5-.3.7s.2.5.5.6.5.1.8-.1L8.3 6c.2-.1.3-.3.3-.5s-.1-.4-.2-.6l-3-3.2c-.2-.1-.4-.2-.6-.2zM6.7 8c-.2 0-.5.1-.6.4-.1.2-.1.5 0 .7s.4.4.7.4h2c.3 0 .5-.1.7-.4.1-.2.1-.5 0-.8-.2-.2-.5-.3-.8-.3z"
              fill="#4d5969"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        secrets.secret.winrmCredential
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          secrets.createWinRmCredWizard.titleDetails
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          configuration
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          secrets.stepTitleVerify
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-small"
        style="height: 500px;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xlarge StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
        >
          secrets.stepTitleVerify
        </p>
        <div
          class="StyledProps--font StyledProps--main"
          style="width: 300px;"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              action="#"
              class="FormikForm--main"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="host-0"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="sshVerifyConnectionForm_host"
                    >
                      secrets.createSSHCredWizard.labelHostname
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="host"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-bold"
                >
                  SECRETS.CREATESSHCREDWIZARD.HOSTNAMEINFO
                </p>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-top-medium Button--with-current-color"
                  style="font-size: smaller;"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    secrets.createSSHCredWizard.btnVerifyConnection
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;
